# Chrysalis

./: .env.example  .gitignore  Cargo.toml  README.md  run
.github/workflows/: ci.yml  release.yml
crates/crys-cli/: Cargo.toml
crates/crys-cli/src/: cli.rs  config_keys.rs  error.rs  main.rs  output.rs  progress.rs
crates/crys-cli/src/commands/: config.rs  index.rs  mod.rs  repo.rs  sync.rs
crates/crys-core/: Cargo.toml
crates/crys-core/src/: chunker.rs  clean.rs  error.rs  gc.rs  global_config.rs  lib.rs  log.rs  objects.rs  repo.rs  s3.rs  stage.rs  status.rs  sync.rs
crates/crys-core/src/store/: local.rs  memory.rs  mod.rs  s3_store.rs
crates/crys-core/tests/: s3_integration.rs  s3_store_integration.rs  sync_integration.rs
