[package]
name = "crys-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Chrysalis: object model, store, sync."

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
